<resources>
    <string name="app_name">Cubículos ULima</string>
    <string name="reserve">Realizar Reserva</string>
    <string name="view">Visualizar Reservas</string>
    <string name="logo">Logo Universidad de Lima</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="login">Ingresar</string>
    <string name="pabellon">Pabellón</string>
    <string name="time">Hora</string>
    <string name="date">Fecha</string>
    <string name="code">Código compañero</string>
    <string name="add_code">Añadir código</string>
    <string-array name="pabellones_array">
        <item>D</item>
        <item>Biblioteca</item>
    </string-array>
</resources>