<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight=".5" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            android:layout_weight="2"
            android:contentDescription="@string/logo"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:text="@string/email"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <EditText
            android:id="@+id/eteEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_weight=".5"
            android:autofillHints="@string/email" />

        <TextView
            android:paddingTop="10dp"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="0.75" />

        <EditText
            android:id="@+id/etePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_weight=".5"
            android:autofillHints="@string/password" />

        <Button
            android:id="@+id/butLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".75"
            android:backgroundTint="#FA5D16"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textColor="#FFFFFF" />


</LinearLayout>