<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pabellon"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/pabellones_spinner"
            android:entries="@array/pabellones_array"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/eteDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:layout_weight="1"
            android:hint="@string/date"
            android:autofillHints="Date"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/eteTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:layout_weight="1"
            android:hint="@string/time"
            android:autofillHints="Time"
            android:inputType="time" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddCode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/add_code"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:id="@+id/codesContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4">
        <EditText
            android:id="@+id/eteCod1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/code"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/eteCod2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/code"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/reserve"/>


</LinearLayout>